--- a/expired.html
+++ b/expired.html
@@ -110,11 +110,16 @@ payment is made to 0703888884 in names of David Bakamize or 0792172818 in names 
     <p>Thank you for supporting <strong>BUSANSO</strong>. We look forward to welcoming you back!</p>
   </div>
 
-  <!-- Footer note -->
-  <div class="footer-note">
-    Need help? Contact our support via email: <strong>support@busanso.com</strong>
-  </div>
+<!-- Footer note -->
+<div class="footer-note">
+  Need help? 
+  <a href="https://wa.me/256703888884?text=hello%20busanso%20nation,%20i%20need%20to%20pay%20now" 
+     target="_blank" 
+     style="color:#25D366; text-decoration:none; font-weight:bold;">
+     WhatsApp us
+  </a>
 </div>
+
 
 </body>
 </html>
