--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,27 @@
     const movies = [
 
          {
+                                                                                                                          type: "series",
+        title: "CAVE HUNTERS",
+        poster: "https://upload.wikimedia.org/wikipedia/en/d/d4/Haunters2010Poster.jpg",
+        description: "2025 Korea Action ",
+        episodes: [
+{ title: "Episode 1", url: "https://drive.google.com/file/d/16QDdoYo6AY2zG2EfWnrVMtRoVC0izICV/view" },
+{ title: "Episode 2", url: "https://drive.google.com/file/d/1fzbHsz6pYHj1x9pzp3FNV_-YzmZOi7Ae/view" },
+{ title: "Episode 3", url: "https://drive.google.com/file/d/1CYcvNM0svykC89TCl_UnqSM-jx34n-Sb/view" },
+{ title: "Episode 4", url: "https://drive.google.com/file/d/13aqZ_UE_Re96RZknEyAc3VjR5uTu3EAN/view" },
+{ title: "Episode 5", url: "https://drive.google.com/file/d/1rjPPY-yorHB_V3C4fp3AHwGgLxKgG-Js/view" },
+{ title: "Episode 6", url: "https://drive.google.com/file/d/1Ac0E0zG1FIw3wnikwpwbDsi9ap_Xolnf/view" },
+{ title: "Episode 7", url: "https://drive.google.com/file/d/1bdPqdVeVu9a6QB_rCO_wpNGnMRRBBq61/view" },
+{ title: "Episode 8", url: "https://drive.google.com/file/d/1HTL0j0bcU540JzPfURIFnp1ESAxQpT4w/view" },
+{ title: "Episode 9", url: "https://drive.google.com/file/d/1IZd17EFG-B2iXZ2I4znputPffE--Tp42/view" },
+
+
+
+]
+          },
+     
+           {
                                                                                                                       type: "series",
         title: "RAILWAY MEMORIES",
         poster: "https://i.ibb.co/TxVnn8K9/c611d13ad8822f0867ea8b386748da42.jpg",
