--- a/serie.html
+++ b/serie.html
@@ -191,34 +191,77 @@ function playEpisode(i){
 
   window.scrollTo({ top:0, behavior:"smooth" });
 
-  // Clear old interval
   if(progressInterval){
     clearInterval(progressInterval);
   }
 
-  // Save progress every 5 seconds
   progressInterval = setInterval(()=>{
     const iframe = document.getElementById("seriesFrame");
     if(!iframe) return;
 
     try{
       const currentTime = savedTime + 5; // fallback estimation
-
       let progress = JSON.parse(localStorage.getItem("seriesProgress_"+serie.id)) || {};
       progress[i] = currentTime;
-
       localStorage.setItem("seriesProgress_"+serie.id, JSON.stringify(progress));
-    }catch(e){
-      // Cross-origin iframe limitation (normal)
-    }
+    }catch(e){}
   },5000);
 }
 
+// ===== RESUME LAST EPISODE IF EXISTS =====
+const lastSeries = JSON.parse(localStorage.getItem("lastSeries") || "{}");
+if(lastSeries && lastSeries.id === serie.id){
+  const lastEp = lastSeries.episodeIndex || 0;
+  const lastTime = lastSeries.currentTime || 0;
+
+  function playEpisodeWithTime(i, startTime=0){
+    const ep = serie.episodes[i];
+    if(!ep) return;
+    idx = i;
+
+    localStorage.setItem("lastSeries", JSON.stringify({
+      id: serie.id,
+      title: serie.title,
+      episodeIndex: i,
+      episodeTitle: ep.title,
+      video: ep.video,
+      thumbnail: serie.thumbnail || "",
+      currentTime: startTime,
+      updated: Date.now()
+    }));
+
+    let videoURL = normalizeVideo(ep.video);
+    if(startTime > 0){
+      if(videoURL.includes("?")) videoURL += `&start=${Math.floor(startTime)}`;
+      else videoURL += `?start=${Math.floor(startTime)}`;
+    }
+
+    player.innerHTML = `<iframe id="seriesFrame" src="${videoURL}" allowfullscreen></iframe>`;
+
+    document.querySelectorAll(".episode")
+      .forEach((el,j)=>el.classList.toggle("active", i===j));
+
+    prevBtn.disabled = i===0;
+    nextBtn.disabled = i===serie.episodes.length-1;
+
+    window.scrollTo({ top:0, behavior:"smooth" });
+
+    if(progressInterval) clearInterval(progressInterval);
+
+    progressInterval = setInterval(()=>{
+      let progress = JSON.parse(localStorage.getItem("seriesProgress_"+serie.id) || "{}");
+      progress[i] = (progress[i] || 0) + 5;
+      localStorage.setItem("seriesProgress_"+serie.id, JSON.stringify(progress));
+    },5000);
+  }
+
+  playEpisodeWithTime(lastEp, lastTime);
+} else {
+  playEpisode(0);
+}
 
 watchBtn.onclick = () => {
-  if (isFreeUser()) {
-    openAd();
-  }
+  if (isFreeUser()) openAd();
   playEpisode(0);
   startAdTimer();
 };
