--- a/watch.html
+++ b/watch.html
@@ -278,7 +278,7 @@ if(!pin){
 
 /* ===== ADDED CONTINUE WATCHING LOGIC ===== */
 const lastMovieId = localStorage.getItem("lastMovieId");
-const lastSeriesData = JSON.parse(localStorage.getItem("lastSeries"));
+const lastSeriesData = JSON.parse(localStorage.getItem("lastSeriesId"));
 
 if(lastMovieId){
   document.getElementById("lastMovieCard").innerHTML = `
@@ -294,7 +294,7 @@ if(lastSeriesData){
   const seriesUrl = `series-player.html?id=${lastSeriesData.id}&ep=${lastSeriesData.episodeIdx}&t=${lastSeriesData.currentTime}`;
   document.getElementById("lastSeriesCard").innerHTML = `
     <strong>${lastSeriesData.title}</strong><br>
-    <button onclick="location.href='serie.html?id${seriesUrl}'">
+    <button onclick="location.href='serie.html?id${lastSerieId}'">
       Resume Series
     </button>
   `;
