--- a/kibanda.html
+++ b/kibanda.html
@@ -304,6 +304,7 @@
 { title: "Episode 4", url: "https://drive.google.com/file/d/1kB2qnxtYikTueIfdeaBcG2EpViG1H3aI/view" },
 { title: "Episode 5", url: "https://drive.google.com/file/d/101gLJxYP_ZSdrtYe74giy10P69NEm_nT/view" },
 { title: "Episode 6", url: "https://drive.google.com/file/d/10MkOLYzsEh07JzCaEwAdkn8jvBvUTtO7/preview" },
+{ title: "Episode 7", url: "https://drive.google.com/file/d/1pWbWbh4L00e74VBc0LL7oFBaNEt-CduO/view" },
 
 ]
           },
