--- a/kibanda.html
+++ b/kibanda.html
@@ -185,7 +185,7 @@
         episodes: [
 { title: "Episode 1", url: "https://drive.google.com/file/d/1qao1Ev6OKaiD9gHXJ_wJW5j_FHHdF-_4/view" },
 { title: "Episode 2", url: "https://drive.google.com/file/d/1Q2mwrDUagSacFkrHIvY5xTvkMy7xGscN/view" },
-{ title: "Episode 3", url: ""https://drive.google.com/file/d/1et6M_YkDvv-OQTgHpi97sHSGNiDbRRqx/view" },
+{ title: "Episode 3", url: "https://drive.google.com/file/d/1et6M_YkDvv-OQTgHpi97sHSGNiDbRRqx/view" },
 { title: "Episode 4", url: "https://drive.google.com/file/d/1qW0n7bxRKkSNEvYoNL9AEU1wI_5rSp18/view" },
 { title: "Episode 5", url: "https://drive.google.com/file/d/1d64_UbNCzeM4Wmc3axSKPPscuaQUN1aA/view" },
 { title: "Episode 6", url: "https://drive.google.com/file/d/1u1-L2zLmM4LSoI8c4Of6wz5lDyIDRJnh/view" },
