--- a/kibanda.html
+++ b/kibanda.html
@@ -190,7 +190,7 @@
 { title: "Episode 5", url: "https://drive.google.com/file/d/1d64_UbNCzeM4Wmc3axSKPPscuaQUN1aA/view" },
 { title: "Episode 6", url: "https://drive.google.com/file/d/1u1-L2zLmM4LSoI8c4Of6wz5lDyIDRJnh/view" },
 { title: "Episode 7", url: "https://drive.google.com/file/d/1hxx1PyQDTDALJ2Cn3p1zQPpCMJnb3xC0/view" },
-{ title: "Episode 8", url: "https://drive.google.com/file/d/1dhR3-9rwPFNkbX-jDQgQeq2gZ1u-w2yI/view" },
+{ title: "Episode 8", url: "https://drive.google.com/file/d/1dhR3-9rwPFNkbX-jDQgQeq2gZ1u-w2yI/view" }
 
 
 ]
