--- a/kibanda.html
+++ b/kibanda.html
@@ -157,6 +157,7 @@
     const movies = [
 
          {
+            type: "series",
              title: "THE GENERAL AND THE PRINCESS",
         poster: "https://m.media-amazon.com/images/M/MV5BYTNiMmE1NTQtMGExNy00MTlhLTg2N2EtODUxZTFlYzY0ZWM2XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg",
         description: "2025 Chine Action ",
