--- a/kibanda.html
+++ b/kibanda.html
@@ -159,7 +159,7 @@
          {
             type: "series",
              title: "THE GENERAL AND THE PRINCESS",
-        poster: "https://m.media-amazon.com/images/M/MV5BYTNiMmE1NTQtMGExNy00MTlhLTg2N2EtODUxZTFlYzY0ZWM2XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg",
+        poster: "https://media.senscritique.com/media/000019409948/0/general_and_i.jpg",
         description: "2025 Chine Action ",
         episodes: [
 { title: "Part 1", url: "https://drive.google.com/file/d/1nSRT5N6YcXes5gwpDtLmbdZtmaWmzYNh/preview" },
